--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="scottspittle.connect4"
+    package="mmt.connect4"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,9 +14,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="scottspittle.connect4.MainActivity"
+            android:name="mmt.connect4.Connect4"
             android:label="@string/app_name"
-            android:screenOrientation="landscape" >
+            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
